--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,11 +1,6 @@
-<h1><%= link_to 'add a task', new_task_path %></h1>
-<%@tasks.each do |task|%>
-  <h2><%= task.name %></h2>
-  <h3><%= task.description %></h3>
-  <%if task.status%>
-    <h3>Done</h3>
-  <%else%>
-    <h3>Not done</h3>
-  <%end%>
-  <p>_______________________________________________________________</p>
+<%= link_to "New article", new_article_path %>
+<%@articles.each do |article|%>
+  <h1><%= link_to article.title, article %></h1>
+  <p><%= article.content %></p>
+  <p><%= '-' * 300 %></p>
 <%end%>
