--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,4 +1,4 @@
-
-
-<%= link_to 'edit task', edit_task_path(task.id) %>
-<%= link_to 'delete task', task_path(task.id), method: :delete %>
+<h1><%= @article.title %></h1>
+<%= link_to 'Edit', edit_article_path(@article.id) %>
+<%= link_to 'Delete task', article_path(@article.id), method: :delete %>
+<p><%= @article.content %></p>
